--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<% provide(:title, "Help") %>
+<!-- <!DOCTYPE html>
 <html>
   <head>
-    <title>Help | Ruby on Rails Tutorial Sample App</title>
+    <title><%= yield(:title)%> | Ruby on Rails Tutorial Sample App</title>
   </head>
-  <body>
+  <body> -->
     <h1>Help</h1>
     <p>
       The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
