--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -151,6 +151,19 @@ aside {
 
   /* forms */
 
+  #error_explanation {
+    ul{
+     color: red;
+     margin: 0 0 30px 0;
+    }
+  }
+
+.field_with_errors {
+     @extend .has-error;
+     .for-control {
+       color: $state-danger-text;
+     }
+   }
   input, textarea, select, .uneditable-input {
     border: 1px solid #bbb;
     width: 100%;
