--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,12 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+<%= content_tag(:div, message, class: "alert alert-#{message_type}")%>
+      <% end %>
       <%= yield %>
-      <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+    <%= render 'layouts/footer' %>
   </body>
-    </html>
-
-    <!-- the traditional rails head below was replaced by the render 'layouts.rails_default' above and that is a pointer to the new partial that i created in the form of _rails_default.html.erb <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all',                       'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application',
-                               'data-turbolinks-track': 'reload' %> -->
+</html>
