--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -151,6 +151,20 @@ aside {
 
   /* forms */
 
+  .checkbox {
+    margin-top: -10px;
+    margin-bottom: 10px;
+    span {
+      margin-left: 20px;
+      font-weigth: normal;
+    }
+  }
+
+  #session_remember_me {
+    width: auto;
+    margin-left: 0;
+  }
+
   #error_explanation {
     ul{
      color: red;
